# mattishakki

./: .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti_1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
src/: ai.py  board.py  main.py  moves.py  movesets.py  utils.py
src/tests/: ai_test.py  moves_test.py
