[project]
name = "mattishakki"
version = "0.1.0"
description = ""
authors = [
    {name = "mistablasta",email = "202978205+mistablasta@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "coverage (>=7.13.5,<8.0.0)"
]

[tool.poetry]
package-mode = false